"STORE_DESCRIPTION" = "VLC for iOS is a port of the free VLC media player to iPad, iPhone and iPod touch.\nIt can play all your movies, shows and music in most formats directly without conversion.\nIt allows file synchronization with Dropbox, GDrive, OneDrive, Box, iCloud Drive, iTunes, direct downloads and through WiFi sharing as well as streaming from SMB, FTP, UPnP/DLNA media servers and the web.\nVLC offers support for advanced subtitles including full SSA compatibility, multi-track audio, and playback speed control.\n\nVLC for iOS is completely free and open source.";

"STORE_DESCRIPTION_TV" = "VLC media player is a free and open source cross-platform multimedia player.\nIt can play all your movies, shows and music in most formats directly without conversion.\nIt allows streaming from cloud services (Dropbox, OneDrive, Box), Remote Playback from your Mac or PC via a Web UI as well as streaming from SMB, FTP, UPnP/DLNA media servers and the web.\nVLC offers support for advanced subtitles including full SSA compatibility, multi-track audio, and playback speed control.\n\nVLC for iOS is completely free and open source.\n\nMetadata and artwork are provided by TMDb and Hatchet, which are community maintained movie and music databases.";

"CHOOSE_AUDIO_TRACK" = "Choose Audio Track";
"CHOOSE_SUBTITLE_TRACK" = "Choose Subtitle Track";
"OPEN_TRACK_PANEL" = "Open track selection";
"CHOOSE_TITLE" = "Choose Title";
"CHOOSE_CHAPTER" = "Choose Chapter";
"CHAPTER_SELECTION_TITLE" = "Chapters";
"TITLE" = "Title";
"CHAPTER" = "Chapter";
"MINIMIZE_PLAYBACK_VIEW" = "Minimize playback";
"FULLSCREEN_PLAYBACK" = "Play in fullscreen";
"TRACK_SELECTION" = "Track Selection";
"AUDIO" = "Audio";
"SUBTITLES" = "Subtitles";
"LANGUAGE" = "Language";
"MEDIA_INFO" = "Media Information";
"VIDEO_DIMENSIONS" = "Video dimensions";
"FORMAT_VIDEO_DIMENSIONS" = "%ix%i pixel";
"FORMAT_AUDIO_TRACKS" = "%i audio tracks";
"ONE_AUDIO_TRACK" = "One audio track";
"FORMAT_SPU_TRACKS" = "%i subtitles tracks";
"ONE_SPU_TRACK" = "One subtitles track";

"PLAYING_EXTERNALLY_TITLE" = "TV Connected";
"PLAYING_EXTERNALLY_DESC" = "This video is playing on the TV";

"VFILTER_HUE" = "Hue";
"VFILTER_CONTRAST" = "Contrast";
"VFILTER_BRIGHTNESS" = "Brightness";
"VFILTER_SATURATION" = "Saturation";
"VFILTER_GAMMA" = "Gamma";

"PREAMP" = "Preamp";
"DB_FORMAT" = "%i dB";
"CHOOSE_EQUALIZER_PROFILES" = "Choose Equalizer Profile";

"PLAYBACK_FAILED" = "Playback failed";
"PLEASE_WAIT" = "Please wait";
"AR_CHANGED" = "Aspect Ratio: %@";
"DEFAULT" = "Default";
"FILL_TO_SCREEN" = "Crop to fill screen";
"DEVICE_TOOSLOW_TITLE" = "Device too slow";
"DEVICE_TOOSLOW" = "Your %@ is likely too slow to play \"%@\". Open anyway?";
"PLAYBACK_SPEED" = "Playback speed";
"SPU_DELAY" = "Subtitles delay";
"AUDIO_DELAY" = "Audio delay";
"BUTTON_SLEEP_TIMER" = "Sleep Timer";
"SLEEP_TIMER_UPDATED" = "Sleep Timer Updated";
"CONTINUE_PLAYBACK" = "Continue playback?";
"CONTINUE_PLAYBACK_LONG" = "Would you like to continue playback of \"%@\" where you left off?";

"BUTTON_ABOUT" = "About";
"BUTTON_ALL" = "Select All";
"BUTTON_BACK" = "Back";
"BUTTON_EDIT" = "Edit";
"BUTTON_DONE" = "Done";
"BUTTON_OPEN" = "Open";
"BUTTON_CANCEL" = "Cancel";
"BUTTON_SAVE" = "Save";
"BUTTON_DOWNLOAD" = "Download";
"BUTTON_DELETE" = "Delete";
"BUTTON_OK" = "OK";
"BUTTON_NEXT" = "Next";
"BUTTON_CONTRIBUTE" = "Contribute";
"BUTTON_CONNECT" = "Connect";
"BUTTON_RENAME" = "Rename";
"BUTTON_COPY" = "Copy";
"BUTTON_LEARN_MORE" = "Learn More";
"BUTTON_LOGOUT" = "Logout";
"BUTTON_CONTINUE" = "Continue";
"PRIVATE_PLAYBACK_TOGGLE" = "Private Playback";

"UPGRADING_LIBRARY" = "Upgrading Media Library";
"UNTITLED_SHOW" = "Untitled Show";
"UNKNOWN" = "Unknown";

"OPEN_NETWORK" = "Open Network Stream";
"NETWORK_TITLE" = "Network Stream";
"RECENT_STREAMS" = "Recent Streams";
"ABOUT_APP" = "About VLC for iOS";
"OPEN_VLC_MENU" = "Open VLC sidebar menu";
"HTTP_UPLOAD_SERVER_OFF" = "Inactive Server";
"HTTP_UPLOAD_NO_CONNECTIVITY" = "No active WiFi connection";
"OPEN_STREAM_OR_DOWNLOAD" = "Would you like to download or play this URL?";
"SHARED_VLC_IOS_LIBRARY" = "Shared VLC for iOS Library";
"SMB_CIFS_FILE_SERVERS" = "File Servers (SMB)";

"SMB_CIFS_FILE_SERVERS_SHORT" = "SMB";


"HTTP_DOWNLOAD_FAILED" = "Download failed with HTTP code %i";
"HTTP_FILE_CREATION_FAILED" = "File creation failed";
"HTTP_DOWNLOAD_CANCELLED" = "Download canceled by user";

"DOWNLOAD_FROM_HTTP_HELP" = "Enter an address to download the file to your %@.";
"DOWNLOAD_FROM_HTTP" = "Downloads";
"ERROR_NUMBER" = "Error %i occured";
"DOWNLOAD_FAILED" = "Download failed";
"FILE_NOT_SUPPORTED" = "File format not supported";
"SCHEME_NOT_SUPPORTED" = "Address scheme not supported";
"SCHEME_NOT_SUPPORTED_LONG" = "The address scheme (%@) is not supported. Please use an address starting with HTTP, HTTPS or FTP.";
"LIBRARY_ALL_FILES" = "All Files";
"LIBRARY_MUSIC" = "Music Albums";
"LIBRARY_SERIES" = "TV Shows";
"LIBRARY_TRACKS" = "%i Tracks";
"LIBRARY_SINGLE_TRACK" = "%i Track";
"LIBRARY_EPISODES" = "%i Episodes, %i unread";
"LIBRARY_SINGLE_EPISODE" = "%i Episode, %i unread";
"LIBRARY_TRACK_N" = "Track %i";
"LIBRARY_MINUTES_LEFT" = "%@m left";
"RENAME_MEDIA_TO" = "Enter new name for %@";

"FOLDER_EMPTY" = "Empty Folder";
"FOLDER_EMPTY_LONG" = "To add files tap Edit, choose the files you want, click the folder-button and select this folder.";
"FOLDER_INVALID_TYPE_TITLE" = "Invalid file types";
"FOLDER_INVALID_TYPE_MESSAGE" = "You can only take two files to form a folder or add a single file to an existing folder.";
"FOLDER_CHOOSE_NAME_TITLE" = "New Folder";
"FOLDER_CHOOSE_NAME_MESSAGE" = "Enter a title for your folder";
"FOLDER_NAME_PLACEHOLDER" = "Folder Title";
"FOLDER_NAME_DUPLICATE_TITLE" = "Title exists";
"FOLDER_NAME_DUPLICATE_MESSAGE" = "Please choose a different title";
"SELECT_FOLDER" = "Select a Folder";

"SHARING_ACTION_SHEET_TITLE_CHOOSE_FILE" = "Choose a file to open:";
"SHARING_ACTIVITY_OPEN_IN_TITLE" = "Open In...";
"SHARING_ERROR_NO_FILES" = "Could not find any files to share";
"SHARING_ERROR_NO_APPLICATIONS" = "Could not find any applications to open this type of file";
"SHARING_SUCCESS_CAMERA_ROLL" = "File was successfully saved to the Camera Roll";

"SECTION_HEADER_LIBRARY" = "Media Library";
"SECTION_HEADER_NETWORK" = "Network";

"LOCAL_NETWORK" = "Local Network";
"CONNECT_TO_SERVER" = "Connect to Server";
"USER_LABEL" = "User";
"PASSWORD_LABEL" = "Password";
"DISABLE_LABEL" = "Disable";
"BUTTON_ANONYMOUS_LOGIN" = "Anonymous Login";

"LOCAL_SERVER_REFRESH" = "Refresh";
"LOCAL_SERVER_LAST_UPDATE" = "Last Updated on %@";
"LOCAL_SERVER_CONNECTION_FAILED_TITLE" = "SERVER CONNECTION FAILED";
"LOCAL_SERVER_CONNECTION_FAILED_MESSAGE" = "Please check your server address and credentials";

"CLOUD_SERVICES" = "Cloud Services";
"LOGIN" = "Login";
"LOGGED_IN" = "Logged in";

"DROPBOX_DOWNLOAD" = "Download file?";
"DROPBOX_DL_LONG" = "Would you like to download \"%@\" to your %@?";
"DROPBOX_LOGIN" = "Login";

"GDRIVE_ERROR_FETCHING_FILES" = "Error while fetching files";
"GDRIVE_DOWNLOAD_SUCCESSFUL" = "Your file has been successfully downloaded";
"GDRIVE_DOWNLOAD_SUCCESSFUL_TITLE" = "SUCCESS";
"GDRIVE_ERROR_DOWNLOADING_FILE" = "An error occured while downloading";
"GDRIVE_ERROR_DOWNLOADING_FILE_TITLE" = "ERROR";

"DISK_FULL" = "Storage limit reached";
"DISK_FULL_FORMAT" = "%@ cannot be stored on your %@, because you don't have enough free space left.";

"NUM_OF_FILES" = "%i files";
"ONE_FILE" = "1 file";
"NO_FILES" = "No supported files";
"DOWNLOADING" = "Downloading...";
"REMAINING_TIME" = "Remaining time: %@";
"ENTER_PASSCODE" = "Enter Passcode";
"REENTER_PASSCODE" = "Re-enter Passcode";
"PASSCODE_SET" = "Set Passcode";
"PASSCODE_CHANGE" = "Change Passcode";
"PASSCODE_ENTER_OLD" = "Enter your old passcode";
"PASSCODE_ENTER_NEW" = "Enter your new passcode";
"PASSCODE_REENTER_NEW" = "Re-enter your new passcode";
"PASSCODES_DID_NOT_MATCH" = "Passcodes did not match. Try again.";
"PASSCODE_FAILED_1" = "1 Failed Passcode Attempt";
"PASSCODE_FAILED_FORMAT" = "%d Failed Passcode Attempts";
"BIOMETRIC_UNLOCK" = "Unlock Media Library\nCancel to enter Passcode";

"Settings" = "Settings"; // plain text key to keep compatibility with InAppSettingsKit's upstream
"ON" = "On";
"OFF" = "Off";

"EMPTY_LIBRARY" = "Empty Media Library";
"EMPTY_LIBRARY_LONG" = "For playback, you can stream media from a server on your local network, from the cloud or synchronize media to your device using the \"Files\" tab in Finder or iTunes, Wi-Fi Upload or cloud services.";

"PLAYBACK_SCRUB_HELP" = "Slide your finger down to adjust the scrubbing rate.";
"PLAYBACK_SCRUB_HIGH" = "High-Speed Scrubbing";
"PLAYBACK_SCRUB_HALF" = "Half-Speed Scrubbing";
"PLAYBACK_SCRUB_QUARTER" = "Quarter-Speed Scrubbing";
"PLAYBACK_SCRUB_FINE" = "Fine Scrubbing";
"PLAYBACK_POSITION" = "Playback Position";
"VIDEO_FILTER" = "Video Filters";
"VIDEO_FILTER_RESET_BUTTON" = "Reset Video Filters";
"VIDEO_ASPECT_RATIO_BUTTON" = "Switch Video Aspect Ratio";
"PLAY_PAUSE_BUTTON" = "Play or Pause current playback";
"BWD_BUTTON" = "Jump Backwards";
"FWD_BUTTON" = "Jump Forwards";
"PLAY_BUTTON" = "Play";
"PAUSE_BUTTON" = "Pause";
"PLAY_ALL_BUTTON" = "Play all";

"VERSION_FORMAT" = "Version: %@";
"BASED_ON_FORMAT" = "Based on:<br />%@";

"NEW" = "NEW";

"BUG_REPORT_TITLE" = "Report a bug";
"BUG_REPORT_MESSAGE" = "Would you like to create a bug report?";
"BUG_REPORT_BUTTON" = "Open Safari";

"VO_VIDEOPLAYER_TITLE" = "Video Player";
"VO_VIDEOPLAYER_DOUBLETAP" = "Double tap to show or hide playback controls";

"FIRST_STEPS_WELCOME" = "Welcome";
"FIRST_STEPS_WELCOME_DETAIL" = "First steps to Sync and Play Your Media.";
"FIRST_STEPS_ITUNES" = "File Sync";
"FIRST_STEPS_ITUNES_DETAILS" = "Connect your %@ to use the Finder or iTunes. In the Finder, select the \"Files\" tab and choose VLC to transfer files.";
"FIRST_STEPS_WIFI_CONNECT_DETAILS" = "Connect your %@ to the same network as your Mac or PC.";
"FIRST_STEPS_WIFI_UPLOAD_DETAILS" = "Switch the toggle in the sidebar, enter the URL to the web browser and upload your files.";
"FIRST_STEPS_CLOUDS" = "Clouds";
"FIRST_STEPS_CLOUD_UPLOAD_DETAILS" = "Upload your media to Google Drive or Dropbox.";
"FIRST_STEPS_CLOUD_ACCESS_DETAILS" = "Open the sidebar to select your Cloud provider and access your media for downloading or streaming.";
"FIRST_STEPS_PLAYBACK" = "Playback";
"FIRST_STEPS_FLOSS" = "VLC for iOS is free and open source software developed by volunteers.\nWe hope you'll love it.";

"FIRST_STEPS_TIME" = "Time";
"FIRST_STEPS_ASPECT" = "Aspect Ratio";
"FIRST_STEPS_SPEED" = "Speed";
"FIRST_STEPS_REPEAT" = "Repeat";
"FIRST_STEPS_SUBTITLES" = "Subtitles Tracks";
"FIRST_STEPS_AUDIO" = "Audio Tracks";
"FIRST_STEPS_POSITION" = "Position";

"PLEX_CHECK_ACCOUNT" = "Check your Plex account in settings";
"PLEX_ERROR_ACCOUNT" = "Plex login Error";

"UNAUTHORIZED" = "Unauthorized";

"SERVER" = "Server";
"SERVER_PORT" = "Port";
"NO_SERVER_FOUND" = "No server found";
"NO_RECENT_STREAMS" = "No stream was played recently";

"WEBINTF_TITLE" = "Sharing via WiFi";
"WEBINTF_DROPFILES" = "Drop Files";
"WEBINTF_DROPFILES_LONG" = "Drop files in the window to add them to your %@.<br>Or click on the \"+\" button to use the file picker dialog.";
"WEBINTF_DOWNLOADFILES" = "Download Files";
"WEBINTF_DOWNLOADFILES_LONG" = "Just click the file you want to download from your %@.";
"WEBINTF_TITLE_ATV" = "Remote Playback";
"WEBINTF_DROPFILES_LONG_ATV" = "Drop files in the window to play them on your %@.<br>Or click on the \"+\" button to use the file picker dialog.";
"WEBINTF_URL_SENT" = "URL sent successfully.";
"WEBINTF_URL_EMPTY" = "URL cannot be empty.";
"WEBINTF_URL_INVALID" = "Not a valid URL.";


"NOW_PLAYING" = "Now Playing";
"PLAY_NOW" = "Play Now";
"PLAYING" = "Playing";
"DETAIL" = "Detail";

"VOLUME" = "Volume";
"DURATION" = "Duration";
"TITLE" = "Title";

// strings from VLCKit
"%ld hours %ld minutes remaining" = "%1$ld hours %2$ld minutes remaining";
"%ld hours %ld minutes" = "%1$ld hours %2$ld minutes";
"%ld minutes remaining" = "%ld minutes remaining";
"%ld minutes" = "%ld minutes";
"%ld minutes %ld seconds remaining" = "%1$ld minutes %2$ld seconds remaining";
"%ld minutes %ld seconds" = "%1$ld minutes %2$ld seconds";
"%ld seconds remaining" = "%ld seconds remaining";
"%ld seconds" = "%ld seconds";

// accessibility labels for the playlist
"OBJECT_TYPE_SHOW" = "Show";
"OBJECT_TYPE_SHOW_EPISODE" = "Show episode";
"OBJECT_TYPE_LABEL" = "Folder";
"OBJECT_TYPE_ALBUM" = "Album";
"OBJECT_TYPE_ALBUM_TRACK" = "Album track";
"OBJECT_TYPE_FILE" = "File";
"OBJECT_TYPE_FILE_AUDIO" = "Audio file";

"NOT_CONNECTED_TO_PHONE_TITLE" = "Not connected to iPhone";
"NOT_CONNECTED_TO_PHONE_MESSAGE" = "Please connect your iPhone to perform remote control actions.";

"LONGPRESS_TO_STOP" = "Long-press to stop playback.";

// ATV specific
"AUDIO_INFO_VC_TITLE" = "Audio Info";
"CLOUD_LOGIN_LONG" = "To access Cloud Services, sign-in to iCloud on both this Apple TV and an iOS device with the same Apple ID and enable Keychain Sharing in System Settings.\nAfterwards, login to the cloud provider of your choice using the VLC app on your iOS device. Finally, select it on this screen.";
"ENTER_URL" = "Enter URL to play";
"HTTP_SERVER_ON" = "Disable Remote Playback";
"HTTP_SERVER_OFF" = "Enable Remote Playback";
"CACHED_MEDIA" = "Cached Media";
"CACHED_MEDIA_LONG" = "Media shown here is stored locally on your Apple TV. Note that contents can be removed by the operating system without prior notice anytime when VLC is not running in case your device runs out of storage.";
"DOWNLOAD_SUBS_FROM_OSO" = "Download subtitles from OpenSubtitles.org...";
"FOUND_SUBS" = "Found subtitles";
"USE_SPDIF" = "Use Pass-through (S/PDIF)";

"PLAYBACK" = "Playback";
"REPEAT_MODE" = "Repeat";
"REPEAT_DISABLED" = "Disabled";
"REPEAT_SINGLE" = "Single";
"REPEAT_FOLDER" = "Folder";

// Local Network Service Names
"UPNP_LONG" = "Universal Plug'n'Play (UPnP)";
"UPNP_SHORT" = "UPnP";

"PLEX_LONG" = "Plex Media Server (via Bonjour)";
"PLEX_SHORT" = "Plex";

"FTP_LONG" = "File Transfer Protocol (FTP)";
"FTP_SHORT" = "FTP";

"BONJOUR_FILE_SERVERS" = "BONJOUR File Server";
"DSM_WORKGROUP" = "Workgroup";

// Insert %@ where play-pause-glyph should be placed
"DELETE_ITEM_HINT" = "Press %@ to Delete"; /* Insert %@ where play-pause-glyph should be placed */

"DELETE_INVALID_MESSAGE" = "The selection can't be deleted";
"DELETE_INVALID_TITLE" = "Invalid Selection";
"DELETE_MESSAGE" = "Confirm the deletion of the selected files";
"DELETE_TITLE" = "Delete Selected Files";

/* New strings */
"Settings" = "Settings";

"MODIFIED_DATE" = "Modified date";
"NAME" = "Name";
